# KDU-2026-AI

./: .gitignore  Dataset.py  GraphRAG_MultiHop_Phase1.ipynb  GraphRAG_MultiHop_Phase2.ipynb  GraphRAG_MultiHop_Phase3.ipynb  Phase-1.ipynb  Phase-1.py  Phase-2.ipynb  Phase-2.py  Phase-3.ipynb  Phase-3.py  Phase-4.ipynb  Phase1_Layout_Handwriting.ipynb  Phase3_Vision_Token_Math.ipynb  Phase_3.ipynb  README.md  pyproject.toml  requirements.txt  streamlit_app.py
Hands-On-3/: app.py  pyproject.toml  requirements.txt
Hands-On-3/config/: assistant.yaml
Hands-On-3/tri_model_assistant/: __init__.py  cli.py  config.py  models.py  schemas.py  text_utils.py  workflow.py
KDU-Cyncly/: README.md  pyproject.toml
KDU-Cyncly/src/auto_design/: __init__.py  __main__.py  cli.py
KDU-Cyncly/src/auto_design/agent/: __init__.py  fallback.py  graph.py  intent.py
KDU-Cyncly/src/auto_design/catalog/: __init__.py  colors.py  partition.py  retrieval.py  service.py
KDU-Cyncly/src/auto_design/explainability/: __init__.py  rationale.py
KDU-Cyncly/src/auto_design/geometry/: __init__.py  openings.py  primitives.py  spatial_index.py
KDU-Cyncly/src/auto_design/mcp_server/: __init__.py  catalog.py
KDU-Cyncly/src/auto_design/output/: __init__.py  envelope.py
KDU-Cyncly/src/auto_design/planner/: __init__.py  feasibility.py  grammar.py  placement.py  variants.py  zones.py
KDU-Cyncly/src/auto_design/rendering/: __init__.py
KDU-Cyncly/src/auto_design/repair/: __init__.py  local.py
KDU-Cyncly/src/auto_design/schemas/: __init__.py  catalog.py  common.py  environment.py  input.py  intent.py  output.py
KDU-Cyncly/src/auto_design/scoring/: __init__.py  layout.py
KDU-Cyncly/src/auto_design/validation/: __init__.py  rules.py
KDU-Cyncly/tests/integration/: test_e2e_topology_fixtures.py  test_generate_cli.py  test_renderer_contract.py
KDU-Cyncly/tests/unit/: test_catalog_partitions.py  test_catalog_resolution.py  test_catalog_retrieval.py  test_catalog_service.py  test_color_resolution.py  test_explainability.py  test_feasibility.py  test_geometry_primitives.py  test_grammar_templates.py  test_intent_extraction.py  test_intent_fallback_parser.py  test_layout_scoring.py  test_local_repair.py  test_mcp_catalog_server.py  test_opening_constraints.py  test_output_envelope.py  test_placement.py  test_planning_graph.py  test_rule_validation.py  test_schemas.py  test_spatial_index.py  test_variant_generation.py  test_zone_planning.py
KDU-Harmony/: .gitignore  .prettierignore  README.md  docker-compose.yml
KDU-Harmony/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
KDU-Harmony/backend/app/: __init__.py  main.py
KDU-Harmony/backend/app/api/: deps.py  router.py
KDU-Harmony/backend/app/api/routes/: audit.py  auth.py  config.py  documents.py  health.py  phi.py  search.py
KDU-Harmony/backend/app/core/: config.py  logging.py  observability.py  security.py
KDU-Harmony/backend/app/db/: seed.py
KDU-Harmony/backend/app/models/: __init__.py  access_policy.py  audit_event.py  care_access.py  document.py  document_chunk.py  enums.py  ingestion_job.py  phi_mapping.py  role.py  user.py
KDU-Harmony/backend/app/schemas/: audit.py  auth.py  documents.py  phi.py  search.py
KDU-Harmony/backend/app/services/: bm25_retrieval.py  care_access.py  chroma_index.py  clinical_metadata.py  context_expansion.py  cross_encoder_reranking.py  dense_retrieval.py  document_chunking.py  document_extraction.py  document_ocr.py  document_storage.py  embedding_pipeline.py  hybrid_retrieval.py  ingestion_review.py  llm_answer.py  phi_store.py  phi_tokenization.py  query_understanding.py  result_rendering.py  retrieval_audit.py  retrieval_authorization.py  retrieval_quality_benchmarks.py  text_normalization.py  timeline_reconstruction.py
KDU-Harmony/backend/migrations/: README.md
KDU-Harmony/backend/migrations/versions/: 0001_create_core_tables.py  0002_seed_auth_rbac.py  0003_add_document_review_status.py  0004_add_chunk_indexing_status.py  0005_seed_default_access_policies.py  0006_add_care_access_scopes.py  0007_seed_harmony_demo_assignments.py
KDU-Harmony/backend/tests/: test_auth.py  test_bm25_retrieval.py  test_chroma_index.py  test_clinical_metadata.py  test_context_expansion.py  test_cross_encoder_reranking.py  test_dense_retrieval.py  test_document_chunking.py  test_document_extraction.py  test_document_ocr.py  test_document_upload.py  test_embedding_pipeline.py  test_health.py  test_hybrid_retrieval.py  test_llm_answer.py  test_observability.py  test_phi_lookup.py  test_phi_tokenization.py  test_query_understanding.py  test_result_rendering.py  test_retrieval_audit.py  test_retrieval_authorization.py  test_retrieval_quality_benchmarks.py  test_search_api.py  test_synthetic_dataset.py  test_text_normalization.py  test_timeline_reconstruction.py
LLMOPS/: pyproject.toml
LLMOPS/config/: app.yaml
LLMOPS/data/: sample_queries.csv
LLMOPS/docs/: architecture.md
LLMOPS/prompts/booking/: v1.yaml
LLMOPS/prompts/complaint/: v1.yaml  v2.yaml
LLMOPS/prompts/fallback/: v1.yaml
LLMOPS/prompts/faq/: v1.yaml  v2.yaml
LLMOPS/src/fixit_llmops/: __init__.py  analysis.py  api.py  classification.py  cli.py  config.py  cost.py  llm_provider.py  models.py  prompts.py  routing.py  service.py  storage.py
LLMOPS/tests/: test_classification.py  test_config.py  test_costs.py  test_prompts.py  test_service.py
agentkit_lab/: __init__.py  cli.py  exceptions.py  logging_utils.py  schemas.py  sdk_support.py  settings.py
app/: __init__.py  cache.py  config.py  costs.py  main.py  memory.py  metrics.py  resilience.py  schemas.py
artifacts/: analytics-report.json  evaluation-report.json
backend/: pyproject.toml
backend/app/: __init__.py  actions.py  auth.py  catalog.py  chat_server.py  config.py  context.py  main.py  realtime.py  schemas.py  store.py
backend/app/widgets/: booking_confirmation.widget  booking_options.widget  handoff_status.widget
backend/tests/: conftest.py  test_security_and_actions.py
config/: config.yml  rails.co
dsl_dataset/: dataset_metadata.json  (+2 more)
(+183 files in other folders)
