[project]
name = "multi-function-ai-assistant"
version = "0.1.0"
description = "Production-style AI assistant with tool calling, streaming, and usage tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.60",
  "openai>=1.51.0",
  "pydantic-settings>=2.6.0",
  "streamlit>=1.39.0",
  "sympy>=1.13.0",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
