[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit-lab"
version = "0.1.0"
description = "Production-grade OpenAI Agents SDK orchestration lab covering loop detection, isolation, memory compaction, and planner-executor flows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.2.0",
]

[project.scripts]
agentkit-lab = "agentkit_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
