[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdu-cyncly-auto-design"
version = "0.1.0"
description = "AI-powered kitchen layout generator using LangGraph, MCP catalog retrieval, deterministic geometry, and the provided Cyncly renderer."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Devi Prasad Reddy P" }
]
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "matplotlib>=3.8",
    "mcp>=1.0",
    "numpy>=1.26",
    "pydantic>=2.8",
]

[project.scripts]
kitchen-catalog-partition = "auto_design.catalog.partition:main"
kitchen-catalog-mcp = "auto_design.mcp_server.catalog:main"

[project.optional-dependencies]
llm-providers = [
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src", "tests"]
