[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-semantic-search-api"
version = "0.1.0"
description = "FastAPI backend for HIPAA-aware semantic search over synthetic medical records."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.1",
    "chromadb>=0.5.5,<0.6.0",
    "fastapi>=0.111.0",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "pydantic-settings>=2.2.1",
    "pytesseract>=0.3.10",
    "sentence-transformers>=2.7.0",
    "psycopg[binary]>=3.1.18",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
generate-synthetic-records = "app.synthetic.generate_dataset:main"
seed-auth-data = "app.db.seed:main"
process-ingestion-jobs = "app.services.document_extraction:main"
process-ocr-jobs = "app.services.document_ocr:main"
bootstrap-chroma-index = "app.services.chroma_index:main"
index-chunk-embeddings = "app.services.embedding_pipeline:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
